# pg2parquet

./: .gitignore  README.md  flake.nix  notes.md
.github/pg_container/: Dockerfile
.github/setupandbuild/: action.yaml
.github/test/: action.yaml
.github/workflows/: build.yaml  build.yml  test.yaml
cli/: Cargo.toml  Cross.toml
cli/.cargo/: config.toml
cli/src/: column_appender.rs  column_pg_copier.rs  level_index.rs  main.rs  myfrom.rs  parquet_row_writer.rs  parquet_writer.rs  parquetinfo.rs  pg_custom_types.rs  pg_schema_inferrer.rs  playground.rs  postgres_cloner.rs  rustutils.rs
cli/src/appenders/: array.rs  byte_array.rs  core.rs  fixed_byte_array.rs  generic.rs  helpers.rs  interface.rs  merged.rs  mod.rs  pg_column.rs  real_memory_size.rs
cli/src/datatypes/: array.rs  interval.rs  jsonb.rs  mod.rs  money.rs  numeric.rs  pgvector.rs  utils.rs
cli/src/pg_utils/: explain_parser.rs  explain_resolver.rs  expr_parser.rs  mod.rs  schema_queries.rs  type_shenanigans.rs
lib/Pg2parquet/: ArrayColumnWriter.cs  ColumnWriter.cs  PrimitiveColumnWriter.cs  SchemaUtils.cs
old_dotnet_attempt/cli/Pg2parquet.CLI/: Pg2parquet.CLI.fsproj  Program.fs
old_dotnet_attempt/lib/Pg2parquet/: MemUtils.cs  NpgsqlTypeHandlers.cs  Pg2PqCopier.cs  Pg2parquet.csproj  TableColumnsWriterBase.cs
py-tests/: .gitignore  pyproject.toml  test_arrays.py  test_basic_types.py  test_cli.py  test_custom_types.py  test_pgvector.py  wrappers.py
rust/pg2parquet/: Cargo.toml
rust/pg2parquet/src/: column_appender.rs  column_pg_copier.rs  level_index.rs  main.rs  myfrom.rs  parquet_row_writer.rs  pg_custom_types.rs  playground.rs  postgres_cloner.rs  postgresutils.rs  range_col_appender.rs
rust/pg2parquet/src/datatypes/: jsonb.rs  mod.rs  money.rs  numeric.rs
