[package]
name = "pg2parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = { version = "24.0.0", default-features = false, features = ["zstd", "lz4", "flate2", "brotli", "snap", "base64"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-serde_json-1", "with-bit-vec-0_6", "with-uuid-1", "with-geo-types-0_7", "with-eui48-1"] }
clap = { version = "4.0.10", features = ["derive"] }
uuid = "1.2.1"
chrono = "0.4.22"
eui48 = "1.1.0"
bit-vec = "0.6.3"
pg_bigdecimal = "0.1.5"
# postgres-openssl = "0.5.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
# codegen-units = 1
# strip = true
# lto = true
# opt-level = "z"

[profile.ci-build]
inherits = "release"
codegen-units = 1
lto = true
# strip = true
