[package]
description = "Command line tool for exporting PostgreSQL tables or queries into Parquet files"
license = "Apache-2.0"
repository = "https://github.com/exyi/pg2parquet"
readme = "../README.md"
keywords = ["cli", "postgres", "parquet"]
documentation = "https://github.com/exyi/pg2parquet"
name = "pg2parquet"
version = "0.1.0-beta.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = { version = "24.0.0", default-features = false, features = ["zstd", "lz4", "flate2", "brotli", "snap", "base64"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-serde_json-1", "with-bit-vec-0_6", "with-uuid-1", "with-geo-types-0_7", "with-eui48-1"] }
clap = { version = "4.0.10", features = ["derive"] }
uuid = "1.2.1"
chrono = "0.4.22"
eui48 = "1.1.0"
bit-vec = "0.6.3"
pg_bigdecimal = "0.1.5"
bytes = "1.3.0"

[target.'cfg(not(any(target_family = "windows", target_arch = "riscv64")))'.dependencies]
jemallocator = "0.3.2"

[target.'cfg(any(target_os = "macos", target_os="windows", all(target_os="linux", not(target_env="musl"), any(target_arch="x86_64", target_arch="aarch64", target_arch="riscv64"))))'.dependencies]
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"

[profile.release]
# codegen-units = 1
# strip = true
# lto = true
# opt-level = "z"

[profile.ci-build]
inherits = "release"
codegen-units = 1
lto = true
# strip = true

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
