[tool.poetry]
name = "pg2parquet-pytests"
version = "0.1.0"
description = ""
authors = ["Standa Lukeš <git@exyi.cz>"]
packages = [{include = "pg2parquet_pytests"}]

[project]
name = "pg2parquet-pytests"
version = "0.1.0"
description = ""
requires-python = ">=3.12"

[tool.poetry.dependencies]
numpy = "2.2.3"
pyarrow = "^19.0.1"
psycopg = "^3.1.19"
duckdb = "^1.2.1"
polars = "^1.24.0"
pytest = "^8.2.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
